have register but havent scrip

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <form action="register.php">
-        User Name <input type="text" ><br>
-        Password <input type="text"> <br>
+        User Name <input type="text" name="user_id"><br>
+        Password <input type="text" name="user_pass"> <br>
+        information <input type="textarea" name="user_info"> <br>
         <input type="submit" value="ลงทะเบียน">
-
+        <input type="reset" value="รีเชต"></Input>
 
     </form>
 </body>
