upload video to dir

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <form action="register.php">
-        User Name <input type="text" name="user_id"><br>
-        Password <input type="text" name="user_pass"> <br>
-        information <input type="textarea" name="user_info"> <br>
+        User Name <input type="text" name="u_id"><br>
+        Password <input type="text" name="u_pass"> <br>
+        Name <input type="textarea" name="u_name"> <br>
+        E-mail <input type="email" name="u_mail">
         <input type="submit" value="ลงทะเบียน">
         <input type="reset" value="รีเชต"></Input>
 
