--- a/register.html
+++ b/register.html
@@ -3,17 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MY_STEAMING</title>
+    <title>Login</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/afterglow/latest/afterglow.min.js"></script>
 </head>
 <body>
-    <form action="register.php">
-        User Name <input type="text" name="u_id"><br>
-        Password <input type="text" name="u_pass"><br>
-        Name <input type="textarea" name="u_name"><br>
-        E-mail <input type="email" name="u_mail">
-        <input type="submit" value="ลงทะเบียน">
-        <input type="reset" value="รีเชต"></Input>
-    </form>
+    <div class="panel-heading">
+        <center><font color="black"><h3><strong>REGISTER</strong></h3></font></center>
+    </div>
+    <div class="panel panel-default">
+    <div class="panel-body">
+        <form class="form-inline">
+            <div class="form-group mx-sm-3 mb-2">
+              Username : <input type="text" class="form-control" id="inputPassword2" placeholder="Username" name="u_id"><br>
+              Password : <input type="password" class="form-control" id="inputPassword2" placeholder="password" name="u_pass"><br>
+              Firstname&Lastname: <input type="text" class="form-control" id="inputPassword2" placeholder="Your name" name="u_name"><br>
+              E-mail : <input type="email" class="form-control" id="inputPassword2" placeholder="E-mail" name="u_mail"><br><br>
+              <button type="submit" class="btn btn-primary mb-2">Register</button>
+              <button type="reset" class="btn btn-primary mb-2">Reset</button>
+            </div>
+            
+        </form>
+      </div>
+      </div>
 </body>
 </html>
