--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
     </div>
     <div class="panel panel-default">
     <div class="panel-body">
-        <form class="form-inline">
+        <form class="form-inline" action="register.php">
             <div class="form-group mx-sm-3 mb-2">
               Username : <input type="text" class="form-control" id="inputPassword2" placeholder="Username" name="u_id"><br>
               Password : <input type="password" class="form-control" id="inputPassword2" placeholder="password" name="u_pass"><br>
